# fastapi_restapi

./: .gitignore  README.md  db_connect.py  main.py  models.py  pyproject.toml  schemas.py
migrations/versions/: 2a8dfbb5147a_init.py  3f366aaa5900_init.py  624e32f09dc1_init.py
src/: schemes.py
src/database/: db_connect.py  db_connect_sqlite.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
